SensingKit implemented plus Battery Sensor for testing
- SenskingKit added (.aar file and gradle repositary + dependancies
added)
- Sensor code from SensingKit page added, testing using Battery sensor,
works well.

--- a/EducationalAugmentedReality/app/src/main/res/values/strings.xml
+++ b/EducationalAugmentedReality/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Educational Augmented Reality Game</string>
+    <string name="app_name">EducationalAugmentedReality</string>
     <string name="action_settings">Settings</string>
 </resources>
